# 16-DataMining_llm-tabular-preprocessing-dict-groups

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements-full.txt  requirements-lock.txt  requirements.txt
Codes/: notebooks_01_basic_example.ipynb  notebooks_02_llm_preprocessing.ipynb
config/: __init__.py  model_config.yaml  prompt_templates.yaml
