[project]
name = "llm-tabular-preprocessing-dict-groups"
version = "1.0.0"
description = "Dictionary-based column grouping and tabular preprocessing for LLM and ML pipelines"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Fabiana Campanari", email = "fabicampanari@proton.me"}
]
keywords = ["pandas", "llm", "feature-engineering", "preprocessing", "groupby"]

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
datasets = [
    "yfinance>=0.2.28",
    "openml>=0.14.0",
    "wbdata>=1.0.0",
    "seaborn>=0.12.0",
    "scikit-learn>=1.3.0",
]
notebook = [
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
    "ipykernel>=6.25.0",
]
kaggle = [
    "kaggle>=1.5.16",
]
viz = [
    "matplotlib>=3.7.0",
    "plotly>=5.17.0",
]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]
all = [
    "llm-tabular-preprocessing-dict-groups[datasets,notebook,kaggle,viz]",
]

[project.urls]
Homepage = "https://github.com/yourusername/llm-tabular-preprocessing-dict-groups"
Repository = "https://github.com/yourusername/llm-tabular-preprocessing-dict-groups"
Issues = "https://github.com/yourusername/llm-tabular-preprocessing-dict-groups/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

